tdf#134039 Chart view: fix moving pie chart area

Do not allow to move data labels, when we create
data series for the first time, in case of pie or
donut chart, but allow to move when we recreate
data series for pie or donut chart.

Change-Id: If0d61116da1524d15553f8a80453ce2003484d1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96534
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit f6604dd2cfbc6d4041ef019951a7f1341197ee26)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97373
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>